--- a/resources/static/edit_product/edit_product.html
+++ b/resources/static/edit_product/edit_product.html
@@ -8,7 +8,8 @@
         <p></p>
         <input class="form-control" type="number" placeholder="Цена" ng-model="updated_product.price">
         <p></p>
-        <input class="form-control" type="text" placeholder="Название категории" ng-model="updated_product.categoryTitle">
+        <input class="form-control" type="text" placeholder="Название категории"
+               ng-model="updated_product.categoryTitle">
         <p></p>
         <button type="submit" class="btn btn-primary">Сохранить изменения</button>
     </form>
